[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Weapons/NormalWeapon.gd" type="Script" id=1]
[ext_resource path="res://Juego/Proyectiles/PlayerLaser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Weapons/SFX_PlayerLaser.ogg" type="AudioStream" id=3]

[node name="NormalWeapon" type="Node2D"]
position = Vector2( -7.62939e-06, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
proyectile = ExtResource( 2 )

[node name="LeftMuzzle" type="Position2D" parent="."]
position = Vector2( 0, 4 )

[node name="RightMuzzle" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 1.7411
bus = "SFX"

[node name="RateOfFire" type="Timer" parent="."]

[connection signal="timeout" from="RateOfFire" to="." method="_on_RateOfFire_timeout"]
